@@ -6,6 +6,7 @@ python-reahl (3.2.0) unstable; urgency=low
  * Added a layout.PageLayout to replace the pure.PageColumnLayout and can be used with bootstrap.ColumnLayout also.
  * Extract DerivedAttributes class from Input class
  * Introduced the InternalRedirect concept
+ * Added functionality to replay_request for a MethodResult.
 
  -- Iwan Vosloo <iwan@reahl.org>  Thu, 19 Mar 2015 13:18:00 +0200
 
